# fatalii

./: .codecov.yml  Cargo.toml  LICENSE  README.md  justfile
.github/workflows/: bench.yml  coverage.yml  lint.yml  tests.yml
engine/: Cargo.toml
engine/src/: best_move_handler.rs  engine.rs  engine_options.rs  engine_out.rs  lib.rs  search_options.rs  timer.rs
engine/tests/: engine.rs  mock_engine_out.rs
eval/: Cargo.toml
eval/src/: complex.rs  eval.rs  game_phase.rs  hand_crafted_eval.rs  hand_crafted_eval_coeffs.rs  lib.rs  material_mobility.rs  mobility.rs  params.rs  pawn_structure.rs  piece_square_tables.rs  piece_table_refs.rs  score.rs  score_pair.rs
fatalii/: Cargo.toml
fatalii/src/: lib.rs  main.rs
fatalii/tests/: cli.rs
movegen/: Cargo.toml
movegen/benches/: bench_movegen.rs
movegen/src/: attacks_to.rs  bishop.rs  bitboard.rs  castling_squares.rs  fen.rs  file.rs  king.rs  knight.rs  lib.rs  move.rs  move_generator.rs  pawn.rs  performance_tester.rs  piece.rs  piece_targets.rs  position.rs  position_history.rs  queen.rs  rank.rs  ray.rs  ray_lookup_tables.rs  repetition_tracker.rs  rook.rs  side.rs  square.rs  transposition_table.rs  zobrist.rs
movegen/src/move_generator/: king_in_check_generator.rs  king_not_xrayed_generator.rs  king_xrayed_generator.rs  move_generator_template.rs
movegen/tests/: perft.rs
perft/: Cargo.toml
perft/benches/: bench_movegen.rs  movegen_performance.rs
perft/src/: lib.rs  performance_tester.rs
search/: Cargo.toml
search/benches/: bench_search.rs
search/src/: alpha_beta.rs  alpha_beta_entry.rs  aspiration_window.rs  counter_table.rs  history_table.rs  lib.rs  lmr_table.rs  move_candidates.rs  move_selector.rs  negamax.rs  negamax_entry.rs  node_counter.rs  pv_table.rs  search.rs  search_data.rs  search_options.rs  search_params.rs  searcher.rs  static_exchange_eval.rs  time_manager.rs
search/tests/: search.rs
src/: bishop.rs  bitboard.rs  direction.rs  fen.rs  king.rs  knight.rs  lib.rs  move_generator.rs  pawn.rs  piece.rs  position.rs  queen.rs  ray.rs  rook.rs  side.rs
tuner/: Cargo.toml  README.md
tuner/src/: error_function.rs  eval_coeffs.rs  eval_params.rs  feature_evaluator.rs  file_reader.rs  lib.rs  main.rs  optimizer.rs  position_features.rs  training.rs
uci/: Cargo.toml
uci/src/: lib.rs  parser.rs  uci_in.rs  uci_move.rs  uci_option.rs  uci_out.rs  uci_score.rs
uci/src/uci_in/: debug.rs  go.rs  is_ready.rs  position.rs  quit.rs  set_option.rs  stop.rs  uci.rs  ucinewgame.rs
uci/src/uci_out/: best_move.rs  id.rs  info.rs  option.rs  ready_ok.rs  uci_ok.rs
uci/tests/: test_buffer.rs  uci.rs
uci/tests/test_buffer/: mod.rs
