[package]
name = "engine"
version = "0.1.0"
authors = ["Patrick Heck <49785565+FitzOReilly@users.noreply.github.com>"]
edition = "2021"

[dependencies]
crossbeam-channel = "0.5"
thiserror = "2.0.11"
movegen = { path = "../movegen" }
search = { path = "../search" }

[dev-dependencies]
more-asserts = "0.3"
eval = { path = "../eval" }
