[package]
name = "fatalii"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
engine = { path = "../engine" }
search = { path = "../search" }
uci = { path = "../uci" }

[dev-dependencies]
assert_matches = "1.5.0"
rexpect = "0.4.0"
