[package]
name = "movegen"
version = "0.1.0"
authors = ["Patrick Heck <49785565+FitzOReilly@users.noreply.github.com>"]
edition = "2021"

[dependencies]
bitflags = "2.4.1"
smallvec = "1.13.1"
thiserror = "1.0.56"

[dev-dependencies]
criterion = "0.5.1"
rand = "0.8"
perft = { path = "../perft" }

[[bench]]
name = "bench_movegen"
harness = false
