[package]
name = "movegen"
version = "0.1.0"
authors = ["Patrick Heck <49785565+FitzOReilly@users.noreply.github.com>"]
edition = "2021"

[dependencies]
bitflags = "2.5.0"
smallvec = "1.13.2"
thiserror = "1.0.59"

[dev-dependencies]
criterion = "0.5.1"
rand = "0.8"
perft = { path = "../perft" }

[[bench]]
name = "bench_movegen"
harness = false
