[package]
name = "movegen"
version = "0.1.0"
authors = ["Patrick Heck <49785565+FitzOReilly@users.noreply.github.com>"]
edition = "2021"

[dependencies]
bitflags = "2.8.0"
rand = "0.9"
rand_chacha = "0.9.0"
smallvec = "1.13.2"
static_init = "1.0.4"
thiserror = "2.0.11"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "bench_movegen"
harness = false
