[package]
name = "perft"
version = "0.1.0"
authors = ["Patrick Heck <49785565+FitzOReilly@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
movegen = { path = "../movegen" }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "movegen_performance"
harness = false
