[package]
name = "search"
version = "0.1.0"
authors = ["Patrick Heck <49785565+FitzOReilly@users.noreply.github.com>"]
edition = "2021"

[dependencies]
crossbeam-channel = "0.5"
eval = { path = "../eval" }
movegen = { path = "../movegen" }

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "bench_search"
harness = false
