[package]
name = "tuner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.2", features = ["derive"] }
nalgebra = { version = "0.32.2", features = ["serde-serialize"] }
nalgebra-sparse = "0.9.0"
rand = "0.8.5"
serde = "1.0.159"
serde_json = "1.0.95"
eval = { path = "../eval" }
movegen = { path = "../movegen" }
