[package]
name = "tuner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.14", features = ["derive"] }
nalgebra = { version = "0.32.3", features = ["serde-serialize"] }
nalgebra-sparse = "0.9.0"
rand = "0.8.5"
serde = "1.0.195"
serde_json = "1.0.111"
eval = { path = "../eval" }
movegen = { path = "../movegen" }
