[package]
name = "tuner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.28", features = ["derive"] }
nalgebra = { version = "0.33.2", features = ["serde-serialize"] }
nalgebra-sparse = "0.10.0"
rand = "0.9.0"
serde = "1.0.217"
serde_json = "1.0.138"
eval = { path = "../eval" }
movegen = { path = "../movegen" }
