[package]
name = "uci"
version = "0.1.0"
authors = ["Patrick Heck <49785565+FitzOReilly@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
engine = { path = "../engine" }
movegen = { path = "../movegen" }
search = { path = "../search" }
