[package]
name = "uci"
version = "0.1.0"
authors = ["Patrick Heck <49785565+FitzOReilly@users.noreply.github.com>"]
edition = "2021"

[dependencies]
regex = "1"
thiserror = "1.0.64"
engine = { path = "../engine" }
eval = { path = "../eval" }
movegen = { path = "../movegen" }
search = { path = "../search" }

[dev-dependencies]
assert_matches = "1.5.0"
